Added directory and index page for documentation.

--- a/data/navbar.yaml
+++ b/data/navbar.yaml
@@ -3,7 +3,7 @@ links:
      href: "/download.html"
         
    - text: "documentation" 
-     href: "/documentation.html"
+     href: "/documentation/"
         
    - text: "about"
      href: "/about.html"
