Fixed URLs for deployment.
Directory URLs (/, /documentation/, etc.) do not get properly converted
when deploying using :http_prefix.

--- a/data/navbar.yaml
+++ b/data/navbar.yaml
@@ -3,7 +3,7 @@ links:
      href: "/download.html"
         
    - text: "documentation" 
-     href: "/documentation/"
+     href: "/documentation/index.html"
         
    - text: "about"
      href: "/about.html"
